tests/NormalTests/paczka1/fuzzy1/39239067.err
Error in line 16: XFQk1HIkp S5 46,0
Error in line 21: XFQk1HIkp A495 55,7
Error in line 17: VvbVVDED A495 76,3
Error in line 22: XFQk1HIkp A480 83,0
Error in line 28: tAJwJ9w S256 71,2
Error in line 30: 4XcC S5 40,89
Error in line 29: tAJwJ9w S5 7,9
